Adjusted min-width of elements to prevent clipping

--- a/src/styles/PizzaMenuStyle.css
+++ b/src/styles/PizzaMenuStyle.css
@@ -97,6 +97,8 @@
   min-height: 128px;
   max-height: fit-content;
   
+  min-width: fit-content;
+  
   border-bottom: 1px solid #cfcecc;
   padding-top: 18px;
   padding-bottom: 32px; 
@@ -143,7 +145,10 @@
   transform-origin: left;
 }
 
-#PizzaMenu .PizzaMenuItem > .MenuItemText { flex: 3; }
+#PizzaMenu .PizzaMenuItem > .MenuItemText { 
+  min-width: 96px;
+  flex: 3;
+}
 #PizzaMenu .PizzaMenuItem > .MenuItemText > *
 {
   line-height: 1.5;
@@ -155,7 +160,7 @@
 }
 
 #PizzaMenu .PizzaMenuItem > .MenuItemIcons 
-{ 
+{  
   display: flex;
   flex-direction: column;
   margin-bottom: -24px;
